[package]
name = "tradeshit"
version = "0.1.0"
authors = ["ASPCartman <aspcartman@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    #    "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.69"
url = "2.3.1"
reqwest = { version = "0.11.14", features = ["cookies", "gzip", "deflate", "json", "multipart", "stream"] }
#tungstenite = { version = "*", features = [] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde_json = "1.0.94"
rand = "0.8.5"
chrono = "0.4.24"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = {version = "*", features = ["js"]}

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
